# esp_sandbox

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
schematics/epd2in9_v2/: epd2in9_v2.kicad_pro  epd2in9_v2.kicad_sch
schematics/hall_sensor/: hall_sensor.kicad_pro  hall_sensor.kicad_sch
schematics/hall_sensor_async/: hall_sensor_async.kicad_pro  hall_sensor_async.kicad_sch
schematics/led/: led.kicad_pro  led.kicad_sch
src/: main.rs
