[package]
name = "esp_sandbox"
version = "0.1.0"
authors = ["Scott Dalgliesh <scott.t.dalgliesh@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0" }
esp-hal = { version = "0.21.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.4.0", features = ["esp32c3", "integrated-timers"] }
riscv-rt = { package = "esp-riscv-rt", version = "0.9.0" }
esp-backtrace = { version = "0.14.2", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
embassy-executor = { version = "0.6.0", features = ["nightly", "task-arena-size-12288"] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.2"}
epd-waveshare = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"

[patch.crates-io]
epd-waveshare = { git = "https://github.com/scottdalgliesh/epd-waveshare.git"}

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
