[package]
authors = ["Scott Dalgliesh <scott.t.dalgliesh@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp_sandbox"
version = "0.1.0"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["nightly"] }
embassy-time = "0.3.2"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
epd-waveshare = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "defmt",
    "esp32c3",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "0.22.0", features = ["defmt", "esp32c3"] }
esp-hal-embassy = { version = "0.5.0", features = ["esp32c3", "integrated-timers"] }
static_cell = "2.1.0"

[patch.crates-io]
epd-waveshare = { git = "https://github.com/scottdalgliesh/epd-waveshare.git" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
