[package]
authors = ["Scott Dalgliesh <scott.t.dalgliesh@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "esp_sandbox"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
epd-waveshare = "0.5.0"
esp-backtrace = { version = "0.16.0", features = [
    "defmt",
    "esp32c3",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.1", features = ["defmt", "esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32c3"] }
static_cell = "2.1.0"

[patch.crates-io]
epd-waveshare = { git = "https://github.com/scottdalgliesh/epd-waveshare.git" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
